# AI-caller

./: .env  .gitignore  Readme.md  contacts.csv  llm.py  logs.json  main.py  pyproject.toml  scratch_2.xml
agents/: Caller.py  STT_agent.py  Sales.py  TTS_agent.py  agent.py  agents.py
tasks/: Talk_to_client_task.py  dial_task.py  tasks.py
tests/: example.txt  sample_product_catalog.txt  testing.py
tools/: LLM_tool.py  STT_tool.py  TTS_tool.py  call_number_tool.py  call_tool.py  dialer_tool.py  tools.py
